tests/paczka1/small_fuzzy/29319269.err
Error in line 1: ZnunHelRG S194 88,72
Error in line 3: ZnunHelRG S194 132,3
Error in line 2: WAleCp A235 67,6
Error in line 5: WbE S356 50,0
